[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://NewGame.gd" type="Script" id=2]

[node name="Game" type="PanelContainer"]
script = ExtResource( 1 )

[node name="box" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 312.0
margin_bottom = 31.0

[node name="map" type="GridContainer" parent="box"]
margin_right = 305.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="info" type="HBoxContainer" parent="box"]
margin_top = 4.0
margin_right = 305.0
margin_bottom = 24.0
custom_constants/separation = 64
alignment = 1

[node name="New" type="Button" parent="box/info"]
margin_right = 82.0
margin_bottom = 20.0
text = "New Game"

[node name="time" type="HBoxContainer" parent="box/info"]
margin_left = 146.0
margin_right = 190.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="box/info/time"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "Time"

[node name="amount" type="Label" parent="box/info/time"]
margin_left = 36.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 17.0
text = "0"

[node name="mines" type="HBoxContainer" parent="box/info"]
margin_left = 254.0
margin_right = 305.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="box/info/mines"]
margin_top = 3.0
margin_right = 39.0
margin_bottom = 17.0
text = "Mines"

[node name="amount" type="Label" parent="box/info/mines"]
margin_left = 43.0
margin_top = 3.0
margin_right = 51.0
margin_bottom = 17.0
text = "0"

[node name="NewGame" type="PopupDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 312.0
margin_bottom = 31.0
script = ExtResource( 2 )

[node name="box" type="VBoxContainer" parent="NewGame"]

[node name="Label" type="Label" parent="NewGame/box"]
margin_right = 177.0
margin_bottom = 14.0
text = "NEW GAME"
align = 1

[node name="HSeparator" type="HSeparator" parent="NewGame/box"]
margin_top = 18.0
margin_right = 177.0
margin_bottom = 22.0

[node name="options" type="HBoxContainer" parent="NewGame/box"]
margin_top = 26.0
margin_right = 177.0
margin_bottom = 106.0
custom_constants/separation = 32
alignment = 1

[node name="difficulty" type="Node" parent="NewGame/box/options"]

[node name="custom" type="VBoxContainer" parent="NewGame/box/options"]
margin_right = 177.0
margin_bottom = 80.0
alignment = 1

[node name="width" type="HBoxContainer" parent="NewGame/box/options/custom"]
margin_right = 177.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="NewGame/box/options/custom/width"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
text = "Custom Width:"

[node name="SpinBox" type="SpinBox" parent="NewGame/box/options/custom/width"]
margin_left = 99.0
margin_right = 173.0
margin_bottom = 24.0

[node name="height" type="HBoxContainer" parent="NewGame/box/options/custom"]
margin_top = 28.0
margin_right = 177.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="NewGame/box/options/custom/height"]
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
text = "Custom Height:"

[node name="SpinBox" type="SpinBox" parent="NewGame/box/options/custom/height"]
margin_left = 103.0
margin_right = 177.0
margin_bottom = 24.0

[node name="mines" type="HBoxContainer" parent="NewGame/box/options/custom"]
margin_top = 56.0
margin_right = 177.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="NewGame/box/options/custom/mines"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
text = "Mine Count:"

[node name="SpinBox" type="SpinBox" parent="NewGame/box/options/custom/mines"]
margin_left = 81.0
margin_right = 155.0
margin_bottom = 24.0

[node name="buttons" type="HBoxContainer" parent="NewGame/box"]
margin_top = 110.0
margin_right = 177.0
margin_bottom = 130.0

[node name="OK" type="Button" parent="NewGame/box/buttons"]
margin_right = 31.0
margin_bottom = 20.0
text = "OK"

[node name="Cancel" type="Button" parent="NewGame/box/buttons"]
margin_left = 35.0
margin_right = 89.0
margin_bottom = 20.0
text = "Cancel"

[node name="game_over" type="Label" parent="."]
margin_left = 7.0
margin_top = 12.0
margin_right = 312.0
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "GAME OVER"
align = 1

[node name="win" type="Label" parent="."]
margin_left = 7.0
margin_top = 12.0
margin_right = 312.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0.820624, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "YOU WIN"
align = 1

[connection signal="pressed" from="box/info/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="NewGame/box/buttons/OK" to="NewGame" method="_on_OK_pressed"]
[connection signal="pressed" from="NewGame/box/buttons/Cancel" to="NewGame" method="_on_Cancel_pressed"]
